# FHIR

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  GUIDELINES.md  PROJECT_MEMORY.md  README.md  bundle.json
.orchids/: orchids.json
fhir-parser/: Cargo.toml
fhir-parser/src/: lib.rs  main.rs  output.rs  validation.rs
fhir-parser/src/fhir/: bundle.rs  claim.rs  condition.rs  coverage.rs  encounter.rs  medication_request.rs  mod.rs  observation.rs  organization.rs  patient.rs  practitioner.rs
src/: cr_lookup.rs  fhir_bundle.rs  lib.rs  main.rs  offline_queue.rs  validation.rs
src/kenyan/: mod.rs  schema.rs  xml_schema.rs
src/mapper/: condition.rs  encounter.rs  medication_request.rs  mod.rs  observation.rs  organization.rs  patient.rs  practitioner.rs  sha.rs
tests/: integration_test.rs
tests/fixtures/: kenyan_patient_1.json  kenyan_patient_1.xml  kenyan_patient_2_male_malaria.json  kenyan_patient_3_no_phone_hypertension.json  kenyan_patient_4_tb_low_spo2.json  kenyan_patient_5_boundary_vitals.json  kenyan_patient_6_uti.json  kenyan_patient_7_sha_puid.json
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/afyalink-post/: route.ts
web/app/api/batch/: route.ts
web/app/api/download/: route.ts
web/app/api/transform/: route.ts
web/app/api/transform-xml/: route.ts
web/app/api/validate/: route.ts
web/lib/: bundle-signing.ts
