[package]
name = "kenya-fhir-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "v5"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Reuse Tier 1 FHIR types
fhir-parser = { path = "fhir-parser" }
clap = { version = "4.5.59", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

